[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-tools"
version = "0.1.0"
description = "Tools for converting ASTRA research reports (JSON) to Quarto and Markdown formats"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["astra", "research", "quarto", "markdown", "bibliography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No external dependencies - uses only Python standard library
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
astra-convert = "astra_tools.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/astra-tools"
Repository = "https://github.com/yourusername/astra-tools"
Issues = "https://github.com/yourusername/astra-tools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
astra_tools = ["data/*.csl"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
